[package]
name = "reify-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tree-sitter parser producing ParsedModule AST"

[dependencies]
reify-types.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-reify.workspace = true

[dev-dependencies]
reify-test-support.workspace = true
