[package]
name = "reify-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tree-sitter parser producing ParsedModule AST"

[dependencies]
reify-core.workspace = true
reify-ast.workspace = true
tree-sitter.workspace = true
tree-sitter-reify.workspace = true

[dev-dependencies]
reify-test-support.workspace = true
# reify-types kept in dev-deps only (not lib deps) so that test files using
# reify_types::ModulePath::single(...) etc. keep compiling until task η
# atomically rewrites all reify_syntax::<AST type> → reify_ast::<…> in
# every call site including these test files.
reify-types.workspace = true
