[package]
name = "reify-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tree-sitter parser producing ParsedModule AST"

[dependencies]
reify-core.workspace = true
reify-ast.workspace = true
tree-sitter.workspace = true
tree-sitter-reify.workspace = true

[dev-dependencies]
reify-ast.workspace = true
reify-core.workspace = true
reify-test-support.workspace = true
