[package]
name = "reify-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Test builders, fixtures, and mock implementations for Reify"

[dependencies]
reify-ast.workspace = true
reify-core.workspace = true
reify-ir.workspace = true
reify-syntax.workspace = true
reify-compiler.workspace = true
reify-eval = { workspace = true, optional = true }
reify-constraints = { workspace = true, optional = true }
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
reify-core.workspace = true
reify-ir.workspace = true
tempfile.workspace = true

[features]
eval-helpers = ["dep:reify-eval", "dep:reify-constraints"]
